# rhoai-observability-mcp

./: .dockerignore  .gitignore  CONTRIBUTING.md  Containerfile  INSTALL.md  Makefile  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml  container-build.yml  kind-e2e.yml
demos/guidellm-gpu-observability/: README.md  deploy-e2e.sh  guidellm-job-external-rampup-dataset.yaml  guidellm-job-external-rampup.yaml  guidellm-job-external.yaml  guidellm-job-isvc-external-rampup.yaml  guidellm-job-isvc.yaml  guidellm-job.yaml  monitoring-rbac.yaml  open-webui.yaml  teardown.sh  vllm-deployment.yaml  vllm-inferenceservice.yaml
deploy/: clusterrolebinding.yaml  deployment.yaml  service.yaml
deploy/base/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  route.yaml  serviceaccount.yaml
deploy/overlays/kind/: fake-vllm-exporter.yaml  kube-prometheus-values.yaml  kustomization.yaml  namespace-patch.yaml
deploy/overlays/openshift/: kustomization.yaml  namespace-patch.yaml
docs/plans/: 2026-02-17-rhoai-observability-mcp-design.md  2026-02-25-openshift-deployment-design.md
hack/fake-vllm-exporter/: exporter.py
src/rhoai_mcp/: auth.py  server.py
src/rhoai_mcp/backends/: alertmanager.py  grafana.py  loki.py  openshift.py  prometheus.py
src/rhoai_mcp/tools/: alerts.py  cluster.py  dashboards.py  investigate.py  logs.py  (+1 more)
src/rhoai_obs_mcp/: __main__.py  auth.py  config.py  server.py
tests/unit/: conftest.py  test_auth.py  test_backends_alertmanager.py  test_backends_grafana.py  test_backends_loki.py  test_backends_openshift.py  test_backends_prometheus.py  test_backends_tempo.py  test_config.py  test_loki_unavailable.py  test_main.py  test_server.py  test_tools_alerts.py  test_tools_cluster.py  test_tools_dashboards.py  test_tools_investigate.py  test_tools_logs.py  test_tools_metrics.py
(+14 files in other folders)
