[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhoai-observability-mcp"
version = "0.1.0"
description = "MCP server for Red Hat OpenShift AI observability and troubleshooting"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "kubernetes>=31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring a live cluster connection",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/rhoai_obs_mcp"]
